[project]
name = "document-mover"
version = "0.3.6"
description = "document mover, for moving scans stable and merge pdfs"
authors = [
    {name = "sebgad", email = "sebgad@sebgad.com"},
]
dependencies = [
    "ruff>=0.14.8",
    "pypdf>=6.4.1",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
pdf-merger = "document_mover:pdf_merger_main"
document-mover = "document_mover:document_mover_main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
